@@ -4,7 +4,8 @@ Changelog
 0.11 (unreleased)
 -----------------
 
-- Nothing changed yet.
+- Get default value from IValue adapter.
+  [vincentfretin]
 
 
 0.10 (2014-02-19)
